fixed pydantic schemas validation
